--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hello-friend-ng"]
 	path = themes/hello-friend-ng
 	url = https://github.com/rhazdon/hugo-theme-hello-friend-ng.git
+[submodule "lukeduffy11.github.io"]
+	path = lukeduffy11.github.io
+	url = git@github.com:lukeduffy11/lukeduffy11.github.io.git
